# mongo-rag

./: .gitignore  README.md  main.py  pyproject.toml
Dataset/: Repository Builiding.xlsx
Dataset/Policies/: R&R Master File.xlsx
Dataset/System Reports/: 1.DatabaseReport_Rpt_Data base Report.xls  4.Goal Status Report 2025-26 All.xlsx  5.Probation Confirmation Report.xls  6.PIP Status Report.xls  7.PIP Transaction Report.xls  8.Leave Transaction With Balance Report_Leave Transaction With Balance Report (3).xlsx  9.Classroom Course Requests.xlsx  Headcount- People Report.xlsx  Leavers Report-People Report.xlsx  PMS Q1 25-26 Rating report - all.xlsx
Dataset/System Reports/2. Offboarding/: Output1.xls
Outputs/xls_to_json/: 3.Performance Goal Report 25-26.json  4.Goal Status Report 2025-26 All.json  6.PIP Status Report.json  7.PIP Transaction Report.json  8.Leave Transaction With Balance Report_Leave Transaction With Balance Report (3).json  9.Classroom Course Requests.json  Headcount- People Report.json  PMS Q1 25-26 Rating report - all.json
chroma_store/documents/: chroma.sqlite3
src/: JSONPIIMasker.py  MONGODB_AGENT_SYS_PROMPT.py  MaskingMongoDBDatabase.py  MogoDBDatabaseToolkitPii.py  Mongo.py  Mongodb_previos_prompt.py  Multimedia_with_img_table.py  Mutlimedia.py  PIIMasking.py  QueryProcessor.py  RegexPIIMasker.py  Router_gpt.py  app.py  langgraph_sample.py  xls_cdv.py  xls_to_json.py
src/feedback/: MongoDBEmbeddingStore.py  cleaner.py  hashing.py  lander.py  oneshot.py
src/rag/: VectorStoreManager.py  app.py  embedder.py  loaders.py  queryengine.py
