[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.11.0",
    "gradio>=5.23.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-mongodb>=0.7.0",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "openai>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic>=2.12.0",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "xlrd>=2.0.2",
]
